# ome-ngff-tables-prototype

./: .gitignore  LICENSE  README.md  image_transform.json  merfish.ipynb  setup.cfg  setup.py
examples/: README.md  fix_dtype.py  load_squidpy_ome_zarr.py  save_load_hcs_data.py  save_load_merfish.py  save_load_points.py  save_load_squidpy_segment.py  save_load_squidpy_visium.py  save_load_toy_dataset.py  squidpy_segment.py  squidpy_visium.py  vitessce_anndata_config.json  vitessce_config_comments.json  write_points.py
examples/test_image.zarr/: .zattrs
examples/test_image.zarr/0/: .zarray
examples/test_image.zarr/0/0/: 0
examples/test_image.zarr/1/: .zarray
examples/test_image.zarr/1/0/: 0
examples/test_image.zarr/2/: .zarray
examples/test_image.zarr/2/0/: 0
examples/test_image.zarr/3/: .zarray
examples/test_image.zarr/3/0/: 0
examples/test_image.zarr/4/: .zarray
examples/test_image.zarr/4/0/: 0
examples/test_image.zarr/points/: .zattrs
examples/test_image.zarr/points/X/: .zarray
examples/test_image.zarr/points/X/0/: 0
examples/test_image.zarr/points/obs/: .zattrs
examples/test_image.zarr/points/obs/_index/: 0
examples/test_image.zarr/points/obs/size/: 0
notebooks/: adata_segment_omezarr.ipynb  adata_visium_omezarr.ipynb
notebooks/merfish/: download.sh  merfish.ipynb  merfish.py
notebooks/merfish/data/: fixed_1001844875.csv
notebooks/merfish/output/: cells.h5ad  image.np.npy  image_transform.json
src/ngff_tables_prototype/: _version.py  reader.py  table_utils.py  writer.py
