[metadata]
name = ngff_tables_prototype

author = Kevin Yamauchi
author_email = kevin.yamauchi@gmail.com
license = BSD-3-Clause
url = https://github.com/kevinyamauchi/ome-ngff-tables-prototype
description = a protype for the ome-ngff tables implementation.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/kevinyamauchi/ome-ngff-tables-prototype/issues
    Documentation = https://github.com/kevinyamauchi/ome-ngff-tables-prototype#README.md
    Source Code = https://github.com/kevinyamauchi/ome-ngff-tables-prototype
    User Support = https://github.com/kevinyamauchi/ome-ngff-tables-prototype/issues

[options]
packages = find:
python_requires = >=3.8
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    anndata
    ome-zarr
    pandas


[options.packages.find]
where = src

# [options.entry_points]
# napari.plugin =
#     ngff_tables_protype = ngff_tables_prototype
